# fig-detect-yolo

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
dataset_generator/: annotate.py  collector.py  main.py
test/: visualize.py
train/: main.py
