[project]
name = "fig-detect-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pydantic>=2.12.0",
    "pymupdf>=1.26.5",
    "pyqt6>=6.9.1",
    "scipy>=1.16.2",
    "ultralytics>=8.3.209",
    "wandb>=0.22.2",
]
